<resources>
    <string name="app_name">Belive</string>
    <string name="try_again">Try Again</string>
    <string name="web_client_id">468951541828-iskr3fb29jspuv6n3uposiimjrim16lr.apps.googleusercontent.com</string>
    <string name="json_required">E52F42A511BDA2C7807922A50005DF7C82D4C52C04788D353082C02D9B38E241648706277BC9FBA2B74D26235D11E5BB303EB6DA5BD33E2F6346A61DCF267618131948E956F88CF7AC81AB63CE3557BA254000FF3761241439DCF85276FB134D</string>
    <string name="fcm_channel_id" translatable="false">fcm_channel_id</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="location_permission_required">Location Permission Required !</string>
    <string name="location_required_message">You need to allow access to\nlocation in order to use Belive.\nPlease try again and hit Turn On</string>
    <string name="reopen_app">Reopen App</string>
    <string name="gist_failed">Server connection error.\nCheck internet &amp; try again.\nIf it continues, restart the app.</string>
    <string name="update_now">Update Now</string>
    <string name="app_redirect_message">We have transferred our server, so install our new app by clicking the button below to enjoy the new features of app.</string>
    <string name="ok">OK</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="missing_permissions_message">The application is missing permissions. It might not work correctly. Do you want to try again?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="what_s_your_name">Hi dear, what’s your sweet name?</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_your_name_to_continue">Enter Your name to continue.</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="how_do_you_identify_your_gender">How do you identify your gender?</string>
    <string name="confirm_your_gender">Confirm your Gender</string>
    <string name="hey_cutie_when_you_born">Hey cutie, when you born?</string>
    <string name="hint_day">DD</string>
    <string name="hint_month">MM</string>
    <string name="hint_year">YYYY</string>
    <string name="slash">/</string>
    <string name="please_enter_valid_date">Please enter valid date</string>
    <string name="you_looking_for">You looking for?</string>
    <string name="men">Men</string>
    <string name="woman">Woman</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="retake_selfie">Retake Selfie</string>
    <string name="everyone">Everyone</string>
    <string name="your_sexual_orientation">Your sexual orientation?</string>
    <string name="i_am_male">I am male</string>
    <string name="i_am_female">I am female</string>
    <string name="other">Other</string>
    <string name="skeleton_tag">Skeleton Tag</string>
    <string name="background_tag">Background Tag</string>
    <string name="animator_tag">Animator Tag</string>
    <string name="padding_tag">Padding Tag</string>
    <string name="image_tint_tag">Image Tint Tag</string>
    <string name="text_tag">Text Tag</string>
    <string name="text_color_tag">Text Color Tag</string>
    <string name="skeleton_start_time">skeleton_start_time</string>
    <string name="skeleton_original_visibility">skeleton_original_visibility</string>
    <string name="skeleton_original_alpha">skeleton_original_alpha</string>
    <string name="skeleton_original_adapter">skeleton_original_adapter</string>
    <string name="skip_skeleton_animation">Skip Skeleton Animation</string>
    <string name="upload_profile_photo">Upload Profile Photos</string>
    <string name="profile_photo_policy">Profile Photo Policy</string>
    <string name="photo_guideline">Photo upload policy states that your profile photo must adhere to certain guidelines.</string>
    <string name="sample_photos">Some sample allow photos are as follows…</string>
    <string name="what_are_your_interests">What are your interests?</string>
    <string name="what_is_your_relationship_goal">What is your Relationship Goal ?</string>
    <string name="permissions">Permissions</string>
    <string name="allow_permission_message">Allow access to the following permissions for better experience…</string>
    <string name="camera">Camera</string>
    <string name="camera_permission_message">This Permission is used for video calls.</string>
    <string name="location">Location</string>
    <string name="location_permission_message">This Permission is used for location.</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_permission_message">This Permission is used for gallery.</string>
    <string name="notification">Notification</string>
    <string name="notification_permission_message">This Permission is used for receive message.</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="enable_permission_message">Belive requires all the specified permissions for the app to function properly. Please enable all permissions in the App Settings.</string>
    <string name="opps">Opps !</string>
    <string name="open_settings">Open Settings</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="ai">AI</string>
    <string name="ls">LS</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="bullet">●</string>
    <string name="account_management">Account Management</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="do_it_later">Do it later</string>
    <string name="logout_message">Log out to securely end your session. You can always log back in whenever you\'re ready.</string>
    <string name="cancel">Cancel</string>
    <string name="logout_title">Do you want to Logout?</string>
    <string name="delete">Delete</string>
    <string name="delete_account_title">Confirm to Delete Account?</string>
    <string name="delete_account_message">Are you sure you want to delete your account? We want to make sure you\'re making the right choice.</string>
    <string name="about_support"><![CDATA[About & Support]]></string>
    <string name="help_center">Help Center</string>
    <string name="helpUrl">https://forms.gle/WohAffepCwJ64ivN6</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackUrl">https://forms.gle/xAs88FjReykobLXV6</string>
    <string name="message_policy_terms">By continuing, you agree to our Terms and Privacy Policy</string>
    <string name="sign_in_message">“Find meaningful connections and spark unforgettable moments”</string>
    <string name="no_profiles_available">You\'ve run out of people. Expand your age and distance settings to see more people.</string>
    <string name="go_to_filters">Go to Filters</string>
    <string name="ai_message">Discover over 10,000 AI recommended matches in one place. Upgrade to premium today!</string>
    <string name="apply">Apply</string>
    <string name="active_location">Active Location</string>
    <string name="change_location">Change Location</string>
    <string name="current_location">Current Location</string>
    <string name="change_my_location">Change my Location</string>
    <string name="search_location">Search Location</string>
    <string name="add_location">Add Location</string>
    <string name="send_message">Send Message</string>
    <string name="personal_information">Personal Information</string>
    <string name="distance">Distance</string>
    <string name="zodiac">Zodiac</string>
    <string name="looking_for">Looking For</string>
    <string name="sexuality">Sexuality</string>
    <string name="about_me">About Me</string>
    <string name="education">Education</string>
    <string name="interests">Interests</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="image_path_tag">Image Path Tag</string>
    <string name="my_profile">My Profile</string>
    <string name="my_balance">My Balance</string>
    <string name="my_diamonds">My Diamonds</string>
    <string name="profile_balance_attached">Profile Balance attached</string>
    <string name="preview">Preview</string>
    <string name="my_photos">My Photos</string>
    <string name="personal_details">Personal Details</string>
    <string name="want_to_date_with">Want to Date with</string>
    <string name="opposite_gender">Opposite Gender</string>
    <string name="sexual_orientation">Sexual Orientation</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="verify_profile">Verify Profile</string>
    <string name="verify_selfie">Verify Selfie</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="take_selfie">Take a Selfie</string>
    <string name="save">Save</string>
    <string name="rearrange_message">You can drag and rearrange\nthe sequence of photos in the preview.</string>
    <string name="full_name">Full Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="religion">Religion</string>
    <string name="height">Height</string>
    <string name="known_languages">Known Languages</string>
    <string name="marital_status">Marital Status</string>
    <string name="add_your_height_message">Add your height to your profile to complete your profile.</string>
    <string name="centimetres">Centimetres</string>
    <string name="height_unit">Height Unit</string>
    <string name="ft_in">ft/in</string>
    <string name="cm">cm</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="error_about_me_minimum">minimum 15 letters required</string>
    <string name="error_about_me_maximum">maximum 100 letters required</string>
    <string name="error_school_minimum">minimum 10 letters required</string>
    <string name="error_school_maximum">maximum 50 letters required</string>
    <string name="error_seven_digits">Don\'t use 7 digits in a row.</string>
    <string name="male">Male</string>
    <string name="change_relationship_goal">Change Relationship Goal</string>
    <string name="message_interests">Interest makes it easier to find who shares your interest.\nAdd 6–12 to your profile to make better connections.</string>
    <string name="get_premium">Get Premium</string>
    <string name="gold">Gold</string>
    <string name="platinum">Platinum</string>
    <string name="lifetime">Lifetime</string>
    <string name="pay_once_enjoy_forever">“Pay Once, Enjoy Forever”</string>
    <string name="all_platinum_benefits">All platinum benefits</string>
    <string name="renew_date">Renew Date:</string>
    <string name="gold_subscription_is_active">“Your Gold subscription is active”</string>
    <string name="platinum_subscription_is_active">“Your Platinum subscription is active”</string>
    <string name="lifetime_subscription_is_active">“You’re Lifetime member”</string>
    <string name="gold_member_message">You\'re now a Belive Gold Member! Enjoy exclusive features and a premium experience</string>
    <string name="congratulations">Congratulations!</string>
    <string name="platinum_member_message">You\'re now a Belive Platinum Member! Enjoy exclusive features and a premium experience</string>
    <string name="delete_messages">Delete Messages?</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
</resources>