<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_24sdp"
    app:cardBackgroundColor="@color/dialogBackground"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_24sdp"
        android:paddingVertical="@dimen/_24sdp">

        <TextView
            style="@style/SubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/opps"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/gist_failed"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTryAgain"
            style="@style/FilledButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/try_again"
            android:textAllCaps="true"
            android:textSize="@dimen/_12ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReOpenApp"
            style="@style/OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/reopen_app"
            android:textAllCaps="true"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>