<?xml version="1.0" encoding="utf-8"?>
<app.juky.squircleview.views.SquircleConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_24sdp"
    app:squircle_background_color="?dialogBackground"
    app:squircle_corner_smoothing_percentage="20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_4sdp">

        <TextView
            android:id="@+id/txt_title"
            style="@style/SubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/delete_messages" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/txt_delete_for_me"
            style="@style/SubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/delete_for_me"
            android:textColor="@color/colorError"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/txt_delete_for_everyone"
            style="@style/SubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/delete_for_everyone"
            android:textColor="@color/colorErrorDark"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/txt_cancel"
            style="@style/SubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/cancel"
            android:textColor="?colorOnBackground"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</app.juky.squircleview.views.SquircleConstraintLayout>