<?xml version="1.0" encoding="utf-8"?>
<app.juky.squircleview.views.SquircleConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_28sdp"
    app:squircle_background_color="@color/dialogBackground"
    app:squircle_border_color="@color/dialogBorder"
    app:squircle_border_width="@dimen/_1sdp"
    app:squircle_corner_smoothing_percentage="20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/delete_account_title"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/delete_account_message"
            android:textColor="?dialogMessageColor"
            android:textSize="@dimen/_12ssp" />

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/img_delete" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                style="@style/FilledButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/delete"
                android:textAllCaps="true"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </LinearLayout>
</app.juky.squircleview.views.SquircleConstraintLayout>