<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_36sdp"
    android:layout_marginRight="@dimen/_36sdp"
    app:cardBackgroundColor="@color/dialogBackground"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        app:squircle_background_color="@color/dialogBackground"
        app:squircle_border_color="@color/colorSecondary"
        app:squircle_border_width="@dimen/_2sdp"
        app:squircle_corner_smoothing_percentage="20">

        <TextView
            android:id="@+id/txt_opps"
            style="@style/SubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/opps"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_message_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/enable_permission_message"
            android:textColor="@color/colorUnselected"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/txt_opps" />

        <Button
            android:id="@+id/btn_open_settings"
            style="@style/FilledButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/open_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_message_permission"
            app:rippleColor="@color/colorOnBackground10" />
    </LinearLayout>
</androidx.cardview.widget.CardView>